:wrench: [styles] fix 136 and other spacings

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -40,13 +40,13 @@
                 transform: scale(1.2);
             }
             .article__media-holder .article__media {
-                transform: scale(.95);
+                transform: scale(.95) !important;
             }
         }
     }
 
     & + & {
-        @include breakpoint-min($bp-large) {
+        @include breakpoint-min($bp-xlarge) {
             margin-left: 20px;
         }
 
@@ -92,6 +92,11 @@
             flex-direction: column;
             align-items: flex-start;
             // flex: 1 0 300px;
+
+            @include breakpoint-min($bp-medium) {
+                transform: none !important;
+                opacity: 1 !important;
+            }
 
             .btn {
                 border: none;
@@ -167,12 +172,21 @@
         background-position: center center;
         transition: all 0.4s ease-out;
 
+        &.has-foregroundImage {
+            .article__media {
+                @include breakpoint-max($bp-medium) {
+                    height: 430px;
+                }
+            }
+        }
+
         &:not(.has-foregroundImage) {
 
             @include breakpoint-max($bp-medium) {
                 height: 400px;
             }
         }
+
         &.background-image {
             transform: scale(1);
         }
@@ -190,6 +204,11 @@
             position: relative;
             z-index: 2;
             padding-top: 80px;
+
+            @include breakpoint-min($bp-medium) {
+                transform: translateX(0) translateX(0) scale(0.8) !important;
+                opacity: 1 !important;
+            }
         }
     }
 }
