--- a/src/styles/benefit-list.scss
+++ b/src/styles/benefit-list.scss
@@ -53,12 +53,12 @@
         text-align: center;
         padding: 10px 0;
 
-        @include breakpoint-min($bp-medium) {
+        @include breakpoint-max($bp-large) {
           width: calc(100% / 2.2);
           margin-left: 10px;
         }
 
-        @include breakpoint-min($bp-large) {
+        @include breakpoint-min($bp-xlarge) {
           width: calc(100% / 4);
           margin-left: 10px;
         }
