--- a/src/styles/campaign-editorial.scss
+++ b/src/styles/campaign-editorial.scss
@@ -20,6 +20,7 @@
 
     .editorial__main {
         display: flex;
+        align-items: center;
 
         @include breakpoint-max($bp-medium) {
             flex-direction: column;
@@ -94,8 +95,15 @@
             transition: transform 250ms cubic-bezier(0, 0.5, 0.5, 1);
 
             @include breakpoint-min($bp-large) {
+                max-width: 150px;
+                height: auto;
+                object-fit: cover;
+            }
+
+            @include breakpoint-min($bp-xlarge) {
                 max-width: 220px;
                 height: auto;
+                object-fit: cover;
             }
 
             // @include breakpoint-max($bp-small) {
